# skvaider_api_client

./: .gitignore  README.md  benchmark_batch_results.json  benchmark_mixed_results.json  benchmark_results.json  dataset.txt  embeddings_comparison.md  main.py  pyproject.toml  shell.nix
src/skvaider_api_client/: __init__.py  benchmark.py  cli.py  client.py  config.py  dataset.py
src/skvaider_api_client/benchmarks/: __init__.py  all.py  base.py  batch_api.py  mixed.py  parallel.py  sustained.py  utils.py
tests/: test_benchmark.py  test_cli.py  test_client.py  test_config.py  test_dataset.py
