[project]
name = "skvaider-api-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "toml>=0.10.2",
]

[project.scripts]
skvaider-api-client = "skvaider_api_client.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
